# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.cu  display.cpp  lights.cu  main.cu  main.cuh  material.cu  material.cuh  mesh.cuh  model.cu  object.cu  object.cuh  octtree.cuh  parsing.cpp  parsing.cuh  parsing.h  plot.py  report  resources.json  scene-1.json  scene.json  scene0.json  scene1.json  scene10.json  scene12.json  scene2.json  scene23.json  scene3.json  scene4.json  scene5.json  scene6.json  scene7.json  scene8.json  scene9.json  sceneS0.json  spheres.cu  vertex.cu
Taller 4.1/: Instrucciones.txt  resources.json
Taller 4.1/escena1/: scene1.json
Taller 4.1/escena2/: scene2.json
Taller 4.1/escena3/: scene3.json
Taller 4.1/escena4/: scene4.json
Taller 4.1/escena5/: scene5.json
Taller 4.1/escena6/: scene6.json
Taller 4.1/escena7/: scene7.json
Taller 4.1/escena8/: scene8.json
camera/: CMakeLists.txt  camera.cu  camera.cuh
debug/: raytracer-gdb.gdb
display/: CMakeLists.txt  display.cpp  display.h
lights/: CMakeLists.txt  lights.cu  lights.cuh
material/: CMakeLists.txt
mesh/: CMakeLists.txt  mesh.cu
model/: model.cuh
object/: CMakeLists.txt
octtree/: CMakeLists.txt  octtree.cu
parsing/: CMakeLists.txt  parsing.cu
ray/: CMakeLists.txt  ray.cu  ray.cuh
scenes/: boxedSpheres.json  heliumAttenuatedSphere.json  heliumSphere.json  lambertBPHSpheres.json  meshClassic.json  meshDragon.json  meshHighBunny.json  meshMedBunny.json  meshPlane.json  meshReflectedSquircle.json  meshSphere.json  meshTeapot.json  meshTorus.json  meshTransparentBunny.json  meshTwoBunnies.json  sphere.json  twoSpheres.json
scripts/: getPixel.py  plot.py
spheres/: CMakeLists.txt  spheres.cuh
triangle/: CMakeLists.txt  triangle.cu  triangle.cuh
vector/: CMakeLists.txt  vector.cu  vector.cuh
vertex/: CMakeLists.txt  vertex.cuh
